# omgui

./: .gitignore  .gitmodules  CMakeLists.txt
examples/basic/: CMakeLists.txt  main.cpp
include/omg/: Application.hpp
src/core/: WinApplication.cpp
src/omg/core/: AbstractApplication.hpp  Application.hpp  ApplicationWin32.cpp  ApplicationWin32.hpp  Constants.hpp
src/omg/events/: AbstractEvent.cpp  AbstractEvent.hpp  ActivationEvent.cpp  ActivationEvent.hpp  CharEvent.cpp  CharEvent.hpp  ContentScaleEvent.cpp  ContentScaleEvent.hpp  DoubleClickEvent.cpp  DoubleClickEvent.hpp  EnableEvent.cpp  EnableEvent.hpp  Event.hpp  EventWin32.cpp  EventWin32.hpp  FileDropEvent.cpp  FileDropEvent.hpp  FocusEvent.cpp  FocusEvent.hpp  KeyEvent.cpp  KeyEvent.hpp  MouseEvent.cpp  MouseEvent.hpp  MouseHoverEvent.cpp  MouseHoverEvent.hpp  MouseMoveEvent.cpp  MouseMoveEvent.hpp  MoveEvent.cpp  MoveEvent.hpp  ResizeEvent.cpp  ResizeEvent.hpp  ScrollEvent.cpp  ScrollEvent.hpp  VisibilityEvent.cpp  VisibilityEvent.hpp  WindowStateEvent.cpp  WindowStateEvent.hpp
src/omg/widgets/: AbstractWindow.cpp  AbstractWindow.hpp  Widget.cpp  Widget.hpp  Window.hpp  WindowWin32.cpp  WindowWin32.hpp
tests/: CMakeLists.txt  TestEvents.cpp  TestMain.cpp
